--- a/counting/config.json
+++ b/counting/config.json
@@ -1,4 +1,4 @@
 {
-	"token": "MTAyMzc3MDg2NDE3MDMxOTg5Mg.GpvV3D.FzA8RhWb7HFvJRzwU2u_eap4ZQLZ0buN8x44ag",
+	"token": "MTAyMzc3MDg2NDE3MDMxOTg5Mg.Gk6t9K.zz5maJU6GEP7nwepXdHLNNYZ9TkQnF3VJOby54",
 	"mongodb": null
 }
